--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react",
-		"allowImportingTsExtensions": true
 	},
+	"allowImportingTsExtensions": true,
 	"include": ["src"]
 }
