--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "cSpell.words": [
-    "dans",
-    "Pokédex",
-    "pokemons"
-  ]
+	"cSpell.words": ["dans", "Pokédex", "pokemons", "POKEMONSLIST"]
 }
