--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["dans", "Pokédex", "pokemons", "POKEMONSLIST"]
+	"cSpell.words": ["dans", "Gestion", "Pokédex", "pokemons", "POKEMONSLIST"]
 }
